--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# git clone https://github.com/username/react-webap
+# npm install
+
 
 # dependencies
 /node_modules
